syntax = "proto3";

package pb;

message DeliverMeta {
	string currHash = 1;
	int64 height = 2;
}
